Major re-factor into two packages within a single workspace.
    - tracing-rfc-5424: the library crate that now includes:
      - support for RFC 3164
      - support for TCP sockets as well as streaming over Unix
        sockets
    - test-rfc-5424: all the test code

--- a/test-rfc-5424/test/Makefile
+++ b/test-rfc-5424/test/Makefile
@@ -3,6 +3,6 @@
 check:
 	rm -f /tmp/syslog.tmp
 	./test-server start
-	cargo test --features=rsyslogd
+	./test-server run-tests
 	./test-server get-syslog /tmp/syslog.tmp
 	./check-syslog-tracing /tmp/syslog.tmp && ./test-server stop
