--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,13 +50,16 @@ jobs:
       run: |
         rustup target add x86_64-unknown-linux-musl
         sudo apt-get install exuberant-ctags
-        cargo install rusty-tags ripgrep
+        cargo install rusty-tags
 
     - name: Check for TODO-s
       shell: bash
       run: |
         set -x
-        if rg -t rust 'TODO|TOOD|LATER|\\todo|todo!|dbg!'; then
+        # `ripgrep` needs rust 1.70 to compile, but I stubbornly refuse
+        # to upgrade my "pinned" rust version!
+        # if rg -t rust 'TODO|TOOD|LATER|\\todo|todo!|dbg!'; then
+        if find . -iname '*.rs' -print0|xargs -0 grep -E 'TODO|TOOD|LATER|\\todo|todo!|dbg!'; then
           echo "You have TODO-s"
           exit 1
         fi
