--- a/tracing-rfc-5424/Cargo.toml
+++ b/tracing-rfc-5424/Cargo.toml
@@ -12,6 +12,12 @@ keywords = ["tracing", "syslog", "rfc-3164", "rfc-5424"]
 categories = ["development-tools::debugging"]
 
 
+[features]
+default = []
+# Enable compatibility with the `log` crate. When enabled, events from the `log` crate
+# that are bridged via tracing-log will have their file/line metadata preserved.
+tracing-log = ["dep:tracing-log"]
+
 [dependencies]
 backtrace = "0.3.66"
 bytes = "1.2.0"
@@ -20,6 +26,7 @@ hostname = "0.3.1"
 local-ip-address = "0.4.5"
 tracing = "0.1.35"
 tracing-core = "0.1.28"
+tracing-log = { version = "0.2", optional = true }
 tracing-subscriber = "0.3.15"
 
 [dev-dependencies]
