Fix the CI workflow.
`time` (a test-rfc-5424 dependency) recently released 0.3.46, which
requires rust 1.88.0 or better. Rust 1.88.0 was released June 26,
2025, and I prefer to let it go at least a year without some
compelling reason).

Since this is a test dependency, I'll explicitly require `time`
< 0.3.46, for now.

Also, fix a bug in `ci.yml` where I forgot to install ripgrep.

--- a/test-rfc-5424/Cargo.toml
+++ b/test-rfc-5424/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 syslog_rfc5424 = "0.9"
+time="<0.3.46" # 0.3.46 requires rustc v1.88.0 or better
+time-core="<0.1.8" # ditto
 tracing = "0.1.36"
 tracing-rfc-5424 = { version = "0.2", path = "../tracing-rfc-5424"}
 tracing-subscriber = "0.3.15"
