--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,7 +50,7 @@ jobs:
       run: |
         rustup component add clippy
         rustup target add x86_64-unknown-linux-musl
-        sudo apt-get install exuberant-ctags
+        sudo apt-get install exuberant-ctags ripgrep
         cargo install rusty-tags
 
     - name: Lint
