Remove tag generation.
`rusty-tags` now requires the 2024 Rust edition, which I'd prefer
not to use, yet. Tagfiles seem a bit antiquated in an age of
language servers, so I'm just removing them all.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,8 +50,7 @@ jobs:
       run: |
         rustup component add clippy
         rustup target add x86_64-unknown-linux-musl
-        sudo apt-get install exuberant-ctags ripgrep
-        cargo install rusty-tags
+        sudo apt-get install ripgrep
 
     - name: Lint
       shell: bash
